Update from April 13, 2021

--- a/65075-h/65075-h.htm
+++ b/65075-h/65075-h.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=us-ascii" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
     <title>
-      The Project Gutenberg eBook of Look to the Stars, by Willard Hawkins
+      The Project Gutenberg eBook of Look to the Stars, by Willard Hawkins.
     </title>
     <link rel="coverpage" href="images/cover.jpg" />
 
@@ -356,7 +356,7 @@ the ones we've been waiting for. Where's the other?"</p>
 crossed to the fireplace. "Mind if I build this up?"</p>
 
 <p>Not waiting for a reply, he heaped on chunks of pine log from the
-half-filled woodbox and soon had a rousing fire. McGruder and the girl
+half-filled woodbox and soon had a rousing fire. MCGruder and the girl
 knelt gratefully in front of the blaze&mdash;the girl shivering. Not bad,
 Marlin decided, at his first sidelong glimpse of her face&mdash;or wouldn't
 be, when her wet hair was fixed up. Then he growled at himself and
@@ -3116,7 +3116,7 @@ had come....</p>
 
 <p>... <i>"But, mother, the goddesses were all beautiful, were they not?"</i></p>
 
-<p><i>"Yes, son, but Pi-Ruh-Al was the most beautiful."</i></p>
+<p><i>"Yes, son, but Pi-Ruk-Al was the most beautiful."</i></p>
 
 <p><i>"Then why do the carvings always show Sa-Hala-Lee with a face, while
 Pi-Ruh-Al has none? I would think&mdash;"</i></p>
